--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,21 +9,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # 1️⃣ Checkout repo
+      # Checkout repo
       - uses: actions/checkout@v4
 
-      # 2️⃣ Setup Node
+      # Setup Node
       - uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # 3️⃣ Install dependencies
+      # Install dependencies
       - run: npm install
 
-      # 4️⃣ Build Vite project
+      # Build Vite project
       - run: npm run build
 
-      # 5️⃣ Deploy /dist folder to GitHub Pages
+      # Deploy /dist folder to GitHub Pages
       - uses: actions/deploy-pages@v4
         with:
           path: ./dist
