--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,22 +8,25 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      # Checkout repo
+      # 1. Checkout repository
       - uses: actions/checkout@v4
 
-      # Setup Node
+      # 2. Setup Node.js
       - uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      # Install dependencies
+      # 3. Install dependencies
       - run: npm install
 
-      # Build Vite project
+      # 4. Build Vite project
       - run: npm run build
 
-      # Deploy /dist folder to GitHub Pages
-      - uses: actions/deploy-pages@v4
+      # 5. Deploy /dist folder to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
         with:
-          path: ./dist
+          branch: gh-pages      # optional: branch to deploy to (default auto)
+          folder: dist          # the built site folder
