--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,32 @@
 name: Build and Deploy Vite Site
-
 on:
   push:
     branches:
       - main
-
 permissions:
   contents: read
   pages: write
   id-token: write
-
+concurrency:
+  group: pages
+  cancel-in-progress: true
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout repo
       - uses: actions/checkout@v4
 
-      # Setup Node.js
-      - uses: actions/setup-node@v4
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: 18
+          bun-version: latest
 
-      # Install dependencies
-      - run: npm ci
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
 
-      # Build Vite project
-      - run: npm run build
+      - name: Build
+        run: bun run build
 
-      # Upload built site
-      - uses: actions/upload-pages-artifact@v1
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: dist
 
@@ -43,4 +39,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
